add h1 and paragraphs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+      <div class="content">
+        <div class="container">
+            <h1>AKAN WEBSITE</h1>
+
+            <p>This is a website that generate Ghananian names under the Akan culture.</p>
+
+            <p>Hello there! This website takes in your birthday details, calculates the week you were born.
+                This depends on your gender and it outputs your Akan name.
+            </p>
+
+            <p>Please proceed with fillin out the form below and submit your details by clicking the generate name button.</p>
+
+            <form class="myform" onsubmit="return getAkanName()">
+                <label for="year=of-birth">
+                     Year:
+                     <input id="year-input" type="number" name="year-of-birth" placeholder="yyyy" value="" required>
+                    </label>
+
+            </form>
+
+        </div>
+      </div>
+
+    
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
