--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
                 <label for="year=of-birth">
                      Year:
                      <input id="year-input" type="number" name="year-of-birth" placeholder="yyyy" value="" required>
-                    </label>
+                </label>
+
+                <label for="month=of-birth">
+                    month:
+                    <input id="month-input" type="number" name="month-of-birth" placeholder="mm" value="" required>
+               </label>
+
+               <label for="day=of-birth">
+                day:
+                <input id="day-input" type="number" name="day-of-birth" placeholder="dd" value="" required>
+           </label>
 
             </form>
 
