--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
       <div class="content">
         <div class="container">
-            <h1>AKAN WEBSITE</h1>
+            <h1>AKAN WEBSITE!</h1>
 
             <p>This is a website that generate Ghananian names under the Akan culture.</p>
 
@@ -37,6 +37,16 @@
                <label for="day=of-birth">
                 day:
                 <input id="day-input" type="number" name="day-of-birth" placeholder="dd" value="" required>
+           </label>
+
+           <label for="gender">
+               Select your gender:
+
+               Male
+               <input type="radio" name="gender" id="male-input" value="male" required>
+
+               Female
+               <input type="radio" name="gender" id="female-input" value="female">
            </label>
 
             </form>
