--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
            <br><br>
 
-           <input type="submit" value="Generate name" id="get-name" name="">
+           <input id="get-name"  type="submit" name="" value="Generate name" >
 
             </form>
 
